2004-06-16 Colin McCormack <colin@chinix.com>
	* Fixed problem with virtual hosts and md5 tcllib bugfix.

2004-06-15 Brent Welch <welch@panasas.com>
        * lib/template.tcl: code smithing and bug fixes in new code.

2004-06-15 Colin McCormack <colin@chinix.com>
	* lib/{template,fallback}.tcl: Fixed bugs in .html/.htm substitution
	  and fallback content negotiation

2004-06-14 Brent Welch <welch@panasas.com>
        * lib/digest.tcl: Removed the "ne" operator from expressions
          as that is an 8.5-specific feature.  We have not formally
          given up on Tcl 8.* compatibility

2004-06-14 Colin McCormack <colin@chinix.com>
	* htdoc/htaccess/*: Made /htaccess accept Windows style pathnames
	* lib/{template,fallback,doc}.tcl: fixed Windows difficulty with .html
	  some corner cases - Thanks to GW Lester

2004-06-12 Colin McCormack <colin@chinix.com>
	* htdoc/access/htman.tml - updated documentation
	* lib/auth.tcl: removed obsolete reference to AuthDefaultFile
	* lib/httpd.tcl: added filtering of content through Httpd_ReturnData
	  and Httpd_ReturnCacheableData
	* lib/url.tcl: added -filter option to Url_PrefixInstall,
	  specifying a content filter.
	* htdoc/man/{url,http}.man: updated for filtering changes.
	* lib/{template,doc,fallback}.tcl: reorganised for
	  generalised templates.
	* lib/redirect.tcl: added Redirect_QuerySelf - Redirect_Self
	  preserving query data

2004-06-11 Colin McCormack <colin@chinix.com>
	* lib/{auth,digest}.tcl: fixed Digest authentication bug
	* htdocs/htaccess/*: improved /htaccess tool
	* lib/thread.tcl: Fixed sf [ 964179 ] error in proc:Thread_IsFree

2004-05-28 Brent Welch <welch@panasas.com>
        * CVS tag tclhttpd-3-5-1 for the 3.5.1 release

2004-05-28 Brent Welch <welch@panasas.com>
        * htdocs/learn/* - various doc updates
        * DIST_build/Makefile.boot
        * DIST_build/DIST
        Updates to use a pre-packaged thread-2.5.2 release because I'm