@@ -4,7 +4,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: utils.tcl,v 1.11 2004/06/15 23:33:14 coldstore Exp $
+# RCS: @(#) $Id: utils.tcl,v 1.12 2004/06/16 03:08:37 welch Exp $
 
 package provide httpd::utils 1.0
 
@@ -606,15 +606,3 @@ if {[package vcompare [package provide Tcl] 8.4] < 0} {
 proc K {a b} {set a}
 proc lambda {argl body} {K [info level 0] [proc [info level 0] $argl $body]}
 
-# Tcllib 1.6 has inconsistencies with md5 1.4.3 and 2.0.0,
-# and requiring 1.0 cures later conflicts with 2.0
-# we run with whatever version is available
-# by making an aliased wrapper
-package require md5
-if {[package vcompare [package present md5] 2.0] > -1} {
-    # we have md5 v2 - it needs to be told to return hex
-    interp alias {} md5hex {} ::md5::md5 --hex --
-} else {
-    # we have md5 v1 - it returns hex anyway
-    interp alias {} md5hex {} ::md5::md5
-}
